--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-        <title>Spring Boot File Upload / Download Rest API Example</title>
+        <title>WebAlignSeq</title>
         <link rel="stylesheet" href="/css/main.css" />
     </head>
     <body>
@@ -11,7 +11,7 @@
         </noscript>
         <div class="upload-container">
             <div class="upload-header">
-                <h2>Spring Boot File Upload / Download Rest API Example</h2>
+                <h2>WebAlignSeq</h2>
             </div>
             <div class="upload-content">
                 <div class="single-upload">
