added instruction for preparation of csv file

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -123,6 +123,9 @@
                             <div class="card-body">
                                 <ul>
                                     <li>
+                                        <a href="http://www.ensembl.org/index.html" target="_blank">Ensembl</a>
+                                    </li>
+                                    <li>
                                         <a href="http://www.bioinformatics.nl/cgi-bin/emboss/merger" target="_blanck">EMBOSS merger</a>
                                     </li>
                                     <li>
