added instruction-start-position html file

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -51,6 +51,7 @@
                                     <li>
                                         If you add csv file containing data regarding SNP in your target gene,
                                         you should provide starting position of your reference sequence on chromosome (for example: 134886812).
+                                        How can you check the start position? <a href="views/instruction-start-position.html"> click here</a>.
                                         This number should be located in position c4 of your excel file.
                                     </li>
                                     <li>
