added links to primer design tools

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -139,6 +139,13 @@
                                         <a href="https://blast.ncbi.nlm.nih.gov/Blast.cgi?PROGRAM=blastn&PAGE_TYPE=BlastSearch&LINK_LOC=blasthome"
                                            target="_blank">NCBI blast</a>
                                     </li>
+                                    <li>
+                                        <a href="https://www.ncbi.nlm.nih.gov/tools/primer-blast/" target="_blank">Primer-BLAST</a>
+                                    </li>
+                                    <li>
+                                        <a href="http://www.bioinformatics.nl/cgi-bin/primer3plus/primer3plus.cgi" target="_blank">Primer3Plus</a>
+                                    </li>
+
 
                                 </ul>
 
